# esp8266-frankenstein

./: .config  .config.bak  .config.old  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Makefile  README  README.env  README.hacking  README.md  SENSORLOGGER.md  kcnf
binary/: antares.rom
cmake/: cross-compile.cmake
configs/: config_default
coverity_configs/: xtensa.xml
coverity_configs/g++-config-0/: coverity_config.xml
coverity_configs/g++-config-1/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
coverity_configs/g++-config-2/: coverity_config.xml
coverity_configs/g++-config-3/: coverity_config.xml
coverity_configs/g++cc-config-0/: coverity-compiler-compat.h  coverity_config.xml
coverity_configs/g++cc-config-1/: coverity_config.xml
coverity_configs/g++cc-config-2/: coverity_config.xml
coverity_configs/g++cc-config-3/: coverity_config.xml
coverity_configs/gcc-config-0/: coverity-macro-compat.h  coverity_config.xml
coverity_configs/gcc-config-1/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
html/: index.html
html/js/: keyboardevent-key-polyfill.js
images/: antares.elf  antares.rom
include/: arch  base64.h  cb.h  cbtools.h  cbuf.h  cbuftools.h  config  console.h  env.h  esp_systemapi.h  espmissingincludes.h  flash_layout.h  generated  helpers.h  hostname.h  httpdconfig.h  iwconnect.h  main.h  microrl-config.h  microrl.h  missing.h  pin_map.h  sched.h  sensorlogger.h  strbuf.h  svc_passthrough.h  svc_telnet.h  tcpbuf.h  tcpservice.h  telnet.h
include/driver/: dht22.h  ds18b20.h  httpclient.h  i2c_at24eep.h  i2c_bh1750.h  i2c_bmp180.h  i2c_hd44780.h  i2c_hmc5883l.h  i2c_ina219.h  i2c_master.h  i2c_mlx90614.h  i2c_pcf8591.h  i2c_sht21.h  i2c_si7020.h  i2c_tcs3414cs.h  lcd_config.h  pwm.h  spi_master.h  spi_register.h  uart.h
include/generic/: macros.h
include/lib/: config.h  mqtt.h  mqtt_msg.h  tftp.h  user_config.h
include/lwip-esp8266/: lwipopts.h  mem_manager.h
include/lwip-esp8266/arch/: cc.h
include/lwip-esp8266/lwip/: igmp.h  opt.h
include/lwip-esp8266/lwip/app/: dhcpserver.h  espconn.h  espconn_tcp.h
lds/: eagle.app.v6.ld
mkespfsimage/: CMakeLists.txt  Makefile  heatshrink_encoder.c  out.espfs
scripts/: iromify
src/: Makefile  ap.c  base64.c  cb.c  cbtest.c  cbtools.c  cbuf.c  cbuftools.c  cmd_adc.c  cmd_at.c  cmd_common.c  cmd_dht11.c  cmd_dht22.c  cmd_ds18b20.c  cmd_env.c  cmd_flash.c  cmd_gpio.c  cmd_i2c.c  cmd_ifconfig.c  cmd_iw.c  cmd_listen.c  cmd_mqtt.c  cmd_net.c  cmd_nslookup.c  cmd_passthrough.c  cmd_ping.c  cmd_poke.c  cmd_scan.c  cmd_send.c  cmd_tftp.c  cmd_uart.c  cmd_wiphy.c  config.h  console.c  console_auth.c  env.c  esp-temp-lwip.c  esp_timer.c  flash_end_marker.c  helpers.c  (+37 more)
src/contrib/: cbuftest.c  tcpecho.sh  tcpechotester.c  tcpechotester.sh  thisLWIP140isFlawed.txt
src/contrib/lwipupdate/: diff-esp  diff-git  diff-git-repatch  gitid-lwip-esp.txt  gitid-lwip-git.txt
src/httpd/: auth.c  cgi.c  cgi.h  config_store.c  config_store.h  cstdint.h  espfs.c  heatshrink_decoder.c  httpd.c  httpd.h  httpdespfs.c  io.c  io.h  main.c  stdout.c  sysex.c  sysex.h  uart.c  uart.h  user_main.c
src/lwip/: Makefile
src/lwip-app/: Makefile  dhcpserver.c  espconn.c  espconn_udp.c  not-compiled-netio.c
src/lwip-esp/: Makefile
src/lwip-esp/api/: Makefile
src/lwip-esp/core/: dhcp.c  dns.c  init.c  mem.c  memp.c  pbuf.c  tcp.c  tcp_in.c  tcp_out.c  timers.c  udp.c
src/lwip-esp/core/ipv4/: Makefile  icmp.c  igmp.c  inet_chksum.c  ip.c  ip_frag.c
src/lwip-esp/include/lwip/: memp_std.h  sys.h  tcp_impl.h  udp.h
src/lwip-esp/include/netif/: etharp.h
src/lwip-esp/netif/: Makefile
src/lwip-git/core/: Makefile  dhcp.c  init.c  mem.c  netif.c  pbuf.c  timers.c
src/lwip-git/core/ipv4/: Makefile
src/lwip-git/include/lwip/: dhcp.h  memp_std.h  netif.h  pbuf.h  sys.h  tcp_impl.h  udp.h
src/lwip-git/netif/: etharp.c
src/lwip-git/netif/ppp/: eap.c
src/lwip/api/: netbuf.c
src/lwip/app/: Makefile  dhcpserver.c  espconn.c  espconn_tcp.c  espconn_udp.c  ping.c
src/lwip/core/: Makefile  dhcp.c  dns.c  init.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  tcp.c  tcp_in.c  tcp_out.c  timers.c
src/lwip/core/ipv4/: icmp.c  igmp.c  ip.c  ip_addr.c
src/lwip/include/ipv4/lwip/: icmp.h  igmp.h  inet_chksum.h  ip.h  ip_addr.h  ip_frag.h
src/lwip/include/lwip/: err.h  init.h  mem.h  memp.h  netbuf.h  netif.h  opt.h  pbuf.h  raw.h  sio.h  stats.h  sys.h  tcp.h  tcp_impl.h  timers.h  udp.h
src/lwip/include/netif/: etharp.h
src/lwip/netif/: etharp.c
src/mqtt/: Makefile  config.c  mqtt.c  mqtt_msg.c  proto.c  queue.c  ringbuf.c  utils.c
src/netapps/: Makefile  dhcpserver.c  espconn.c  espconn_tcp.c  espconn_udp.c  ping.c
src/netapps-is-not-compiled/: dhcpserver.c  espconn.c  espconn_tcp.c
src/sensorloggers/: adc.c  ping.c  vdd3v3.c
